# frtrg

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
doc/: conf.py  index.rst
src/frtrg/: __init__.py  compact_rtrg.py  cuda_helpers.cu  data_management.py  frequency_integral.py  gen_data.py  gen_pulse_data.py  kondo.py  reservoirmatrix.py  rtrg.py  rtrg_c.c  rtrg_cublas.c  rtrg_cublas.h  rtrg_cublas.makefile  settings.py  setup_cublas.py  visualize.py
